--- a/wechat_web/pages/index/index.wxml
+++ b/wechat_web/pages/index/index.wxml
@@ -1,10 +1,25 @@
 <!--index.wxml-->
-<view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
+<view class="weui-panel">
+  <view bindtap="bindViewTap" class="userinfo">
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
+  <view class="">
+    <view class="">
+      <text class="weui-flex">您还剩余3次体验时间</text>
+      <view class="weui-btn-area">
+        <button type="primary" size="default">开始体验</button>
+      </view>
+    </view>
+
+    <view class="experience-pay">
+      <button type="default" size="default">月卡（100元/4次）</button>
+      <button type="default" size="default">单次体验（30元/次）</button>
+    </view>
+
+    <view class="experience-history">
+      <text>充值记录</text>
+      <text>体验历史</text>
+    </view>
   </view>
 </view>
