--- a/wechat_web/pages/index/index.wxss
+++ b/wechat_web/pages/index/index.wxss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 200rpx;
 }
 
 .userinfo-avatar {
@@ -16,6 +17,20 @@
   color: #aaa;
 }
 
-.usermotto {
-  margin-top: 200px;
+.beginexperience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200rpx;
+}
+.experience-pay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 200rpx;
+}
+.experience-history {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
