--- a/wechat_web/pages/index/index.wxml
+++ b/wechat_web/pages/index/index.wxml
@@ -1,25 +1,37 @@
 <!--index.wxml-->
-<view class="weui-panel">
-  <view bindtap="bindViewTap" class="userinfo">
+<view class="page__hd page__bd_spacing">
+  <view bindtap="viewUserinfo" class="userinfo">
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
   </view>
-  <view class="">
-    <view class="">
-      <text class="weui-flex">您还剩余3次体验时间</text>
-      <view class="weui-btn-area">
-        <button type="primary" size="default">开始体验</button>
-      </view>
+</view>
+<view class="page__bd page__bd_spacing">
+  <view class="weui-flex">
+    <view class="weui-flex__item" style="text-align: center;">
+      <text>您还剩余3次体验时间</text>
     </view>
+  </view>
+  
+  <view class="weui-flex">
+    <view class="weui-flex__item">
+      <button type="primary" bindtap="beginExperience">开始体验</button>
+    </view>
+  </view>
 
-    <view class="experience-pay">
-      <button type="default" size="default">月卡（100元/4次）</button>
-      <button type="default" size="default">单次体验（30元/次）</button>
+  <view class="weui-flex">
+    <view class="weui-flex__item">
+    <view class="button-sp-area">
+      <button class="weui-btn" type="default" plain="true">月卡（100元/4次）</button>
+      <button class="weui-btn" type="default" plain="true">单次（ 30元/1次）</button>
     </view>
+    </view>
+  </view>
 
-    <view class="experience-history">
-      <text>充值记录</text>
-      <text>体验历史</text>
+  <view class="weui-footer weui-footer_fixed-bottom">
+    <view class="weui-footer__links">
+      <navigator url="" class="weui-footer__link">充值记录</navigator>
+      <navigator url="" class="weui-footer__link">体验历史</navigator>
     </view>
+    <view class="weui-footer__text">Copyright © 2014-2017 boxjet3d.com</view>
   </view>
 </view>
