--- a/wechat_web/pages/index/index.wxss
+++ b/wechat_web/pages/index/index.wxss
@@ -1,26 +1,15 @@
-/**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 100rpx;
-  margin-bottom: 50rpx;
+/* pages/index/index.wxss */
+.logo-container {
+  text-align: center;
+  margin-top: 400rpx;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+.slogan-container {
+  text-align: center;
+  margin: 20rpx 0;
+  color: #008cd6;
 }
 
-.userinfo-nickname {
-  color: #aaa;
-}
-
-
-.button-sp-area{
-    margin: 50rpx auto;
-    padding-top: 15px;
-    width: 60%;
+.logo {
+  height: 64px;
 }
