delete index page

--- a/wechat_web/pages/index/index.wxss
+++ b/wechat_web/pages/index/index.wxss
@@ -1,4 +1,30 @@
-/* pages/index/index.wxss */
+/**index.wxss**/
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100rpx;
+  margin-bottom: 50rpx;
+}
+
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+}
+
+.userinfo-nickname {
+  color: #aaa;
+}
+
+
+.button-sp-area{
+    margin: 50rpx auto;
+    padding-top: 15px;
+    width: 60%;
+}
+
 .logo-container {
   text-align: center;
   margin-top: 400rpx;
